--- a/style.css
+++ b/style.css
@@ -2,6 +2,30 @@
   font-size: 10px;
 }
 
+@media (max-width: 1160px) {
+  :root {
+    font-size: 9px;
+  }
+}
+
+@media (max-width: 1060px) {
+  :root {
+    font-size: 8px;
+  }
+}
+
+@media (max-width: 940px) {
+  :root {
+    font-size: 7px;
+  }
+}
+
+@media (max-width: 840px) {
+  :root {
+    font-size: 6.5px;
+  }
+}
+
 body {
   margin: 0;
   cursor: default;
@@ -9,6 +33,88 @@ body {
 
 p {
   margin: 0;
+}
+
+.burgerMenu {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  background-color: #1f1f1f;
+}
+
+.burgerMenuWrapper {
+  width: 80%;
+  height: 90%;
+  margin: 5% auto 0;
+}
+
+.burgerMenuWrapper img {
+  width: 40%;
+  margin-bottom: 10rem;
+}
+
+.burgerMenuWrapper .burgerMenuLinks {
+  height: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 2px solid #fff;
+  padding-bottom: 5%;
+  margin-bottom: 3%;
+}
+
+.burgerMenuWrapper .burgerMenuLinks a {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 21px;
+  color: #fff;
+  text-decoration: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.burgerMenuWrapper .burgerMenuLinks a:hover {
+  color: #aaaaaa;
+}
+
+.burgerMenuWrapper .burgerMenuFollow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 2px solid #fff;
+  padding-bottom: 5%;
+  margin-bottom: 3%;
+}
+
+.burgerMenuWrapper .burgerMenuFollow svg {
+  margin-right: 5%;
+}
+
+.burgerMenuWrapper .burgerMenuFollow svg:hover {
+  fill: #aaaaaa;
+}
+
+.burgerMenuWrapper .burgerMenuSocials svg {
+  width: 10%;
+  height: 30px;
+  margin-right: 5%;
+}
+
+.burgerMenuWrapper .burgerMenuSocials svg:hover {
+  fill: #aaaaaa;
 }
 
 .firstPage {
@@ -33,6 +139,18 @@ p {
   padding-top: 3rem;
 }
 
+@media (max-width: 1120px) {
+  .firstPage .firstPageHeader {
+    width: 80%;
+  }
+}
+
+@media (max-width: 960px) {
+  .firstPage .firstPageHeader {
+    width: 90%;
+  }
+}
+
 .firstPage .firstPageHeader .firstPageHeaderLeft {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -48,7 +166,7 @@ p {
 
 .firstPage .firstPageHeader .firstPageHeaderLeft a {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   text-decoration: none;
@@ -96,14 +214,14 @@ p {
 
 .firstPage .firstPageHeader .firstPageHeaderRight :nth-child(1) p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
 }
 
 .firstPage .firstPageHeader .firstPageHeaderRight :nth-child(2) a {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   text-decoration: none;
@@ -136,6 +254,106 @@ p {
           transform: scale(1.3);
 }
 
+.firstPage .firstPageHeader .menuButton {
+  width: 5rem;
+  height: 5rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: none;
+  position: absolute;
+  z-index: 2;
+  right: 15px;
+  cursor: pointer;
+}
+
+.firstPage .firstPageHeader .menuButton div {
+  height: 0.5rem;
+  width: 4rem;
+  margin-left: 0.5rem;
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+.firstPage .firstPageHeader .menuButton div:nth-child(2) {
+  width: 3rem;
+}
+
+.firstPage .firstPageHeader .menuButtonBlink {
+  position: absolute;
+  z-index: 1;
+  display: none;
+  right: calc(15px - ( 6rem - 5rem)/2);
+  width: 6rem;
+  height: 6rem;
+  background-color: #1f1f1f;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  -webkit-animation: burgerMenuBlink 2s infinite alternate 0.5s;
+          animation: burgerMenuBlink 2s infinite alternate 0.5s;
+}
+
+.firstPage .firstPageHeader .menuButtonBlink:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+  border: 1px solid #bbb;
+}
+
+@-webkit-keyframes burgerMenuBlink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
+    opacity: 0.3;
+  }
+}
+
+@keyframes burgerMenuBlink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
+    opacity: 0.3;
+  }
+}
+
+@media (max-width: 770px) {
+  .firstPage .firstPageHeader {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .firstPage .firstPageHeader .firstPageHeaderLeft, .firstPage .firstPageHeader .firstPageHeaderRight {
+    display: none;
+  }
+  .firstPage .firstPageHeader .menuButton {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .firstPage .firstPageHeader .menuButtonBlink {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .firstPage h1 {
   margin: 0 auto;
   margin-top: 55vh;
@@ -165,7 +383,7 @@ p {
   margin: 0 auto;
   margin-top: 5vh;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 1.8rem;
@@ -211,6 +429,18 @@ p {
           justify-content: space-between;
 }
 
+@media (max-width: 1020px) {
+  .firstPage .firstPageFooter .firstPageFooterContent {
+    width: 90%;
+  }
+}
+
+@media (max-width: 910px) {
+  .firstPage .firstPageFooter .firstPageFooterContent {
+    display: none;
+  }
+}
+
 .firstPage .firstPageFooter .firstPageFooterContent div {
   width: 1px;
   height: 100%;
@@ -227,9 +457,21 @@ p {
   padding: 11rem 0;
 }
 
+@media (max-width: 780px) {
+  .secondPage .secondPageContent {
+    width: 80%;
+  }
+}
+
+@media (max-width: 650px) {
+  .secondPage .secondPageContent {
+    width: 78%;
+  }
+}
+
 .secondPage .secondPageContent h3 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 2.1rem;
@@ -251,6 +493,9 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 20px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -267,11 +512,11 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 17rem;
+  width: 15%;
   height: 5rem;
   border: 2px solid #D6D6D6;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 1.8rem;
@@ -289,6 +534,35 @@ p {
   letter-spacing: 0.15em;
   -webkit-transition: 0.35s;
   transition: 0.35s;
+}
+
+.secondPage .secondPageContent .secondPageContentButtons .focus {
+  background-color: #6b6b6b;
+  border: 2px solid black;
+  color: #fff;
+  -webkit-transform: translateY(0.3rem);
+          transform: translateY(0.3rem);
+  letter-spacing: 0.15em;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+}
+
+@media (max-width: 720px) {
+  .secondPage .secondPageContent .secondPageContentButtons {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .secondPage .secondPageContent .secondPageContentButtons a {
+    width: 30%;
+    letter-spacing: 0;
+  }
+}
+
+@media (max-width: 380px) {
+  .secondPage .secondPageContent .secondPageContentButtons a {
+    font-size: 1.6rem;
+  }
 }
 
 .secondPage .secondPageContent .secondPageContentBlocks {
@@ -346,14 +620,35 @@ p {
   position: absolute;
   bottom: 3rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
+  text-transform: uppercase;
   font-size: 2.4rem;
   font-weight: 500;
   letter-spacing: 0.1em;
   width: 100%;
   text-align: center;
+}
+
+@media (max-width: 780px) {
+  .secondPage .secondPageContent .secondPageContentBlocks {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .secondPage .secondPageContent .secondPageContentBlocks a {
+    width: 34rem;
+  }
+}
+
+@media (max-width: 650px) {
+  .secondPage .secondPageContent .secondPageContentBlocks {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .secondPage .secondPageContent .secondPageContentBlocks a {
+    width: 45rem;
+  }
 }
 
 .thirdPage {
@@ -365,7 +660,7 @@ p {
 
 .thirdPage h3 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 2.1rem;
@@ -384,7 +679,7 @@ p {
 
 .thirdPage p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 1.8rem;
@@ -409,7 +704,7 @@ p {
   background-color: #fff;
   border: 2px solid black;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   text-decoration: none;
@@ -432,13 +727,13 @@ p {
 }
 
 .forthPage {
-  width: 110rem;
+  width: 80%;
   margin: 12rem auto;
 }
 
 .forthPage h3 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 2.1rem;
@@ -464,13 +759,16 @@ p {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 20px;
 }
 
 .forthPage .forthPageBlockS a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 35rem;
+  width: 32rem;
   position: relative;
   overflow: hidden;
 }
@@ -502,12 +800,22 @@ p {
   bottom: 3.5rem;
   text-decoration: none;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 2.1rem;
   width: 100%;
   text-align: center;
+}
+
+@media (max-width: 1240px) {
+  .forthPage .forthPageBlockS {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .forthPage .forthPageBlockS a {
+    width: 33rem;
+  }
 }
 
 .forthPage .forthPageButton {
@@ -527,7 +835,7 @@ p {
   border: 1px solid black;
   text-decoration: none;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 1.8rem;
@@ -548,13 +856,13 @@ p {
 }
 
 .fivthPage {
-  width: 110rem;
+  width: 80%;
   margin: 0 auto 15rem;
 }
 
 .fivthPage p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   color: black;
@@ -575,6 +883,9 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
@@ -582,13 +893,19 @@ p {
 
 .fivthPage .fivthPageBlocks div {
   width: 50%;
+  margin: -1px;
+}
+
+@media (max-width: 820px) {
+  .fivthPage .fivthPageBlocks div {
+    width: 75%;
+  }
 }
 
 .fivthPage .fivthPageBlocks div img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 30rem;
   width: 100%;
 }
 
@@ -613,7 +930,7 @@ p {
   margin-top: 10rem;
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 2.1rem;
@@ -635,9 +952,36 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 50%;
-  height: 9rem;
   margin: 0 auto 12rem;
+}
+
+@media (max-width: 840px) {
+  .sixthPage .sixthPageBlocks {
+    width: 70%;
+  }
+}
+
+@media (max-width: 670px) {
+  .sixthPage .sixthPageBlocks {
+    width: 80%;
+  }
+}
+
+@media (max-width: 580px) {
+  .sixthPage .sixthPageBlocks {
+    width: 90%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .sixthPage .sixthPageBlocks .sixthPageBlocksLeft {
+    margin-bottom: 30px;
+  }
 }
 
 .sixthPage .sixthPageBlocks .sixthPageBlocksLeft {
@@ -654,6 +998,12 @@ p {
           justify-content: space-between;
 }
 
+@media (max-width: 580px) {
+  .sixthPage .sixthPageBlocks .sixthPageBlocksLeft {
+    width: 60%;
+  }
+}
+
 .sixthPage .sixthPageBlocks .sixthPageBlocksLeft div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -663,13 +1013,13 @@ p {
           align-items: center;
 }
 
-.sixthPage .sixthPageBlocks .sixthPageBlocksLeft div svg {
+.sixthPage .sixthPageBlocks .sixthPageBlocksLeft div img {
   margin-right: 2rem;
 }
 
 .sixthPage .sixthPageBlocks .sixthPageBlocksLeft div p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   font-size: 1.8rem;
@@ -677,9 +1027,22 @@ p {
 
 .sixthPage .sixthPageBlocks .sixthPageBlocksRight {
   width: 50%;
+  height: 9rem;
   border: 1px solid #fff;
   background-color: black;
   padding: 1rem;
+}
+
+@media (max-width: 670px) {
+  .sixthPage .sixthPageBlocks .sixthPageBlocksRight {
+    width: 60%;
+  }
+}
+
+@media (max-width: 400px) {
+  .sixthPage .sixthPageBlocks .sixthPageBlocksRight {
+    width: 70%;
+  }
 }
 
 .sixthPage .sixthPageBlocks .sixthPageBlocksRight div {
@@ -727,11 +1090,12 @@ p {
           align-items: center;
   background-color: black;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
+  font-size: 1.5rem;
   font-weight: 500;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05em;
 }
 
 .sixthPage .sixthPageBlocks .sixthPageBlocksRight div a:hover {
@@ -746,10 +1110,13 @@ p {
 }
 
 .seventhPage {
-  width: 110rem;
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 40px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -786,7 +1153,7 @@ p {
   display: -ms-flexbox;
   display: flex;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   color: black;
@@ -818,7 +1185,7 @@ p {
 
 .seventhPage .seventhPagePayment p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   color: black;
@@ -856,7 +1223,7 @@ p {
 
 .seventhPage .seventhPageContacts div p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   color: black;
@@ -880,7 +1247,7 @@ p {
 
 .seventhPage .seventhPageSocials p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   color: black;
@@ -888,15 +1255,40 @@ p {
 }
 
 .seventhPage .seventhPageSocials svg {
-  margin-right: 2rem;
+  margin-right: 7px;
 }
 
 .seventhPage .seventhPageSocials svg:hover {
   fill: #aaaaaa;
 }
 
+.seventhPage .seventhPageSocials svg:last-child {
+  margin: 0;
+}
+
+@media (max-width: 735px) {
+  .seventhPage {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .seventhPage .seventhPageLinks, .seventhPage .seventhPagePayment, .seventhPage .seventhPageContacts, .seventhPage .seventhPageSocials {
+    width: 35%;
+  }
+}
+
+@media (max-width: 500px) {
+  .seventhPage {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .seventhPage .seventhPageLinks, .seventhPage .seventhPagePayment, .seventhPage .seventhPageContacts, .seventhPage .seventhPageSocials {
+    width: 51%;
+  }
+}
+
 footer {
-  width: 110rem;
+  width: 90%;
   border-top: 1px solid #000;
   margin: 0 auto;
 }
@@ -906,6 +1298,9 @@ footer div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 10px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -914,7 +1309,7 @@ footer div {
 
 footer div p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
   color: #000;
@@ -922,5 +1317,80 @@ footer div p {
 
 footer div p:last-child {
   text-decoration: underline;
+}
+
+@media (max-width: 650px) {
+  footer {
+    width: 98%;
+  }
+}
+
+@media (max-width: 540px) {
+  footer {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  footer p {
+    width: 35%;
+    text-align: center;
+  }
+}
+
+.openBurgerMenu {
+  -webkit-animation: openBurger 1.5s forwards;
+          animation: openBurger 1.5s forwards;
+}
+
+@-webkit-keyframes openBurger {
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+}
+
+@keyframes openBurger {
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+}
+
+.closeBurgerMenu {
+  -webkit-animation: closeBurger 1s forwards;
+          animation: closeBurger 1s forwards;
+}
+
+@-webkit-keyframes closeBurger {
+  0% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: rotate();
+            transform: rotate();
+  }
+}
+
+@keyframes closeBurger {
+  0% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    -webkit-transform: rotate();
+            transform: rotate();
+  }
 }
 /*# sourceMappingURL=style.css.map */
