--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,19 @@
 :root {
   font-size: 10px;
+  @media (max-width: 1160px) {
+      font-size: 9px;
+  }
+  @media (max-width: 1060px) {
+    font-size: 8px;
+  }
+  @media (max-width: 940px) {
+      font-size: 7px;
+  }
+  @media (max-width: 840px) {
+    font-size: 6.5px;
+}
+
+//  border 760
 }
 
 body {
@@ -14,7 +28,7 @@ p {
 
 @mixin FPHeader {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.4rem;
+    font-size: 14px;
     font-weight: 400;
     color: #fff;
 }
@@ -30,6 +44,74 @@ p {
     text-transform: uppercase;
 } 
 
+.burgerMenu {
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 90%;
+    background-color: rgb(31, 31, 31);
+
+        &Wrapper {
+            width: 80%;
+            height: 90%;
+            margin: 5% auto 0;
+
+                img {
+                    width: 40%;
+                    margin-bottom: 10rem;
+                }
+
+                .burgerMenuLinks {
+                    height: 40%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    border-bottom: 2px solid #fff;
+                    padding-bottom: 5%;
+                    margin-bottom: 3%;
+
+                        a {
+                            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                            font-size: 21px;
+                            color: #fff;
+                            text-decoration: none; 
+                            width:fit-content;
+                            &:hover {
+                                color: rgb(170, 170, 170);
+                            }
+                        }
+                }
+
+                .burgerMenuFollow {
+                    display: flex;
+                    align-items: center;
+                    border-bottom: 2px solid #fff;
+                    padding-bottom: 5%;
+                    margin-bottom: 3%;
+
+                        svg {
+                            margin-right: 5%;
+                            &:hover {
+                                fill:rgb(170, 170, 170);
+                            }
+                        }
+                }
+
+                .burgerMenuSocials {
+                        
+                        svg {
+                            width: 10%;
+                            height: 30px;
+                            margin-right: 5%;
+                            &:hover {
+                                fill:rgb(170, 170, 170)
+                            }
+                        }
+                }
+        }
+}
 
 .firstPage {
   height: 100vh;
@@ -46,6 +128,12 @@ p {
         justify-content: space-between;
         margin: 0 auto;
         padding-top: 3rem;
+        @media  (max-width: 1120px) {
+                width: 80%;
+        }
+        @media (max-width: 960px) {
+                width: 90%;
+        }
 
             .firstPageHeaderLeft {
                 display: flex;
@@ -119,6 +207,78 @@ p {
                             }
                     }
             }
+
+            .menuButton {
+                width: 5rem;
+                height: 5rem;
+                flex-direction: column;
+                justify-content: space-around;
+                display: none;
+                position: absolute;
+                z-index: 2;
+                right: 15px;
+                cursor: pointer;
+                
+                    div {
+                        height: 0.5rem;
+                        width: 4rem;
+                        margin-left: 0.5rem;
+                        background-color: #fff;
+                        border-radius: 2px;
+                        
+                    }    
+
+                    div:nth-child(2) {
+                        width: 3rem;
+                    } 
+            }
+
+            .menuButtonBlink {
+                position:absolute;
+                z-index: 1;
+                display: none;
+                right: calc(15px - ( 6rem - 5rem)/2);
+                width: 6rem;
+                height: 6rem;
+                background-color: rgb(31, 31, 31);
+                border: 1px solid #fff;
+                border-radius: 50%;
+                animation: burgerMenuBlink 2s infinite alternate 0.5s;
+                &:hover {
+                    animation-play-state: paused;
+                    border: 1px solid #bbb;
+                }
+            }
+
+        @keyframes burgerMenuBlink {
+            0% {
+                opacity: 0;
+                
+            }
+            50% {
+                opacity: 0.8;
+                
+            }
+            100% {
+                transform: scale(1.4);
+                opacity: 0.3;
+                
+            }
+        }
+
+        @media (max-width: 770px) {
+            justify-content: center;
+            align-items: center;
+            .firstPageHeaderLeft, .firstPageHeaderRight {
+                display: none;
+            }
+            .menuButton {
+                display: flex;
+            }
+            .menuButtonBlink {
+                display: flex;
+            }
+        }
     }
 
     h1 {
@@ -171,6 +331,12 @@ p {
             height: 5rem;
             display: flex;
             justify-content: space-between;
+            @media (max-width: 1020px) {
+                width: 90%;
+            }
+            @media (max-width: 910px) {
+                display: none;
+            }
 
                 div {
                     width: 1px;
@@ -188,7 +354,12 @@ p {
             width: 110rem;
             margin: 0 auto;
             padding: 11rem 0;
-            
+            @media (max-width: 780px) {
+                width: 80%;
+            }
+            @media (max-width: 650px) {
+                width: 78%;
+            }
                 h3 {
                     @include FPHeader();
                     font-size: 2.1rem;
@@ -208,6 +379,8 @@ p {
 
                 .secondPageContentButtons {
                     display: flex;
+                    flex-wrap: wrap;
+                    row-gap: 20px;
                     justify-content: space-between;
 
                         a {
@@ -215,7 +388,7 @@ p {
                             display: flex;
                             align-items: center;
                             justify-content: center;
-                            width: 17rem;
+                            width: 15%;
                             height: 5rem;
                             border: 2px solid #D6D6D6;
                             @include FPHeader();
@@ -231,7 +404,29 @@ p {
                                 letter-spacing: 0.15em;
                                 transition: 0.35s;
                             }
-                        }   
+                        }
+
+                        .focus {
+                            background-color: rgb(107, 107, 107);
+                            border: 2px solid black;
+                            color: #fff;
+                            transform: translateY(0.3rem);
+                            letter-spacing: 0.15em;
+                            transition: 0.35s;
+                        }
+                        
+                    @media (max-width: 720px) {
+                        justify-content: space-between;
+                        a {
+                            width: 30%;
+                            letter-spacing: 0;
+                        }
+                    }
+                    @media (max-width: 380px) {
+                        a {
+                            font-size: 1.6rem;
+                        }
+                    }
                 }
 
 
@@ -272,6 +467,7 @@ p {
                                     position: absolute;
                                     bottom: 3rem;
                                     @include FPHeader();
+                                    text-transform: uppercase;
                                     font-size: 2.4rem;
                                     font-weight: 500;
                                     letter-spacing: 0.1em;
@@ -279,6 +475,19 @@ p {
                                     text-align: center;
                                 }
                         }
+
+                    @media (max-width: 780px) {
+                        justify-content: space-around;
+                        a {
+                            width: 34rem;
+                        }
+                    }
+                    @media (max-width: 650px) {
+                        justify-content: space-around;
+                        a {
+                            width: 45rem;
+                        }
+                    }
                 }
         }
 }
@@ -342,7 +551,7 @@ p {
 }
 
 .forthPage {
-    width: 110rem;
+    width: 80%;
     margin: 12rem auto;
     
         h3 {
@@ -366,10 +575,13 @@ p {
             display: flex;
             justify-content: space-between;
             width: 100%;
+            flex-wrap: wrap;
+            row-gap: 20px;
+            
 
                 a {
                     display: flex;
-                    width: 35rem;
+                    width: 32rem;
                     position: relative;
                     overflow: hidden;
                     &:hover img {
@@ -396,8 +608,15 @@ p {
                         font-size: 2.1rem;
                         width: 100%;
                         text-align: center;
+                        }      
+                }
+            
+                @media (max-width: 1240px) {
+                   justify-content: space-around;
+                        a {
+                        width: 33rem;
                         }
-            }
+                }
         }
 
         .forthPageButton {
@@ -427,7 +646,7 @@ p {
 }
 
 .fivthPage {
-    width: 110rem;
+    width: 80%;
     margin: 0 auto 15rem;
 
         p {
@@ -448,15 +667,20 @@ p {
 
         .fivthPageBlocks {
             display: flex;
+            justify-content: center;
             flex-wrap: wrap;
             width: 100%;
             
                 div {
                     width: 50%;
+                    margin: -1px;
+                    @media (max-width:820px) {
+                        width: 75%;
+                    }
 
                         img {
                             display: flex;
-                            height: 30rem;
+                            // height: 30rem;
                             width: 100%;
                         }
                 }
@@ -496,21 +720,39 @@ p {
         .sixthPageBlocks {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             width: 50%;
-            height: 9rem;
             margin: 0 auto 12rem;
+            @media (max-width: 840px) {
+                width: 70%;
+            }
+            @media (max-width: 670px) {
+                width: 80%;
+            }
+            @media (max-width: 580px) {
+                width: 90%;
+                flex-direction: column;
+                .sixthPageBlocksLeft {
+                    margin-bottom: 30px;    
+                }
+            }
 
                 .sixthPageBlocksLeft {
                     width: 35%;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    @media (max-width: 580px) {
+                        width: 60%;
+                        
+                        
+                    }
 
                         div {
                             display: flex;
                             align-items: center;
 
-                                svg {
+                                img {
                                     margin-right: 2rem;
                                 }
 
@@ -523,9 +765,16 @@ p {
 
                 .sixthPageBlocksRight {
                     width: 50%;
+                    height: 9rem;
                     border: 1px solid #fff;
                     background-color: black;
                     padding: 1rem;
+                    @media (max-width: 670px) {
+                        width: 60%;
+                    }
+                    @media (max-width: 400px) {
+                        width: 70%;
+                    }
 
                         div {
                             display: flex;
@@ -557,8 +806,9 @@ p {
                                     align-items: center;
                                     background-color: black;
                                     @include FPHeader();
+                                    font-size: 1.5rem;
                                     font-weight: 500;
-                                    letter-spacing: 0.1em;
+                                    letter-spacing: 0.05em;
                                     &:hover{
                                         transform: translateX(0.1rem);
                                         letter-spacing: 0.1em;
@@ -574,10 +824,13 @@ p {
 }
 
 .seventhPage {
-    width: 110rem;
+    width: 80%;
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 40px;
     justify-content: space-between;
     margin: 8rem auto 6rem;
+    
 
         .seventhPageLinks {
             width: 23%;
@@ -657,23 +910,42 @@ p {
                 }
 
                 svg {
-                    margin-right: 2rem;
+                    margin-right: 7px;
                     &:hover {
                         fill:rgb(170, 170, 170)
                     }
                 }
 
+                svg:last-child {
+                    margin: 0;
+                }
+
         }
+
+    @media (max-width: 735px) {
+        justify-content: space-around;
+            .seventhPageLinks, .seventhPagePayment, .seventhPageContacts, .seventhPageSocials {
+            width: 35%;
+            }
+    }
+    @media (max-width: 500px) {
+        justify-content: center;
+            .seventhPageLinks, .seventhPagePayment, .seventhPageContacts, .seventhPageSocials {
+            width: 51%;
+            }
+    }
 }
 
 footer {
-    width: 110rem;
+    width: 90%;
     border-top: 1px solid #000;
     margin: 0 auto;
 
         div {
             width: 100%;
             display: flex;
+            flex-wrap: wrap;
+            row-gap: 10px;
             justify-content: space-between;
             margin-top: 2rem;
 
@@ -686,4 +958,44 @@ footer {
                     text-decoration: underline;
                 }
         }
+
+    @media (max-width: 650px) {
+        width: 98%;
+    }
+    @media (max-width: 540px) {
+        justify-content: space-around;
+        p {
+            width: 35%;
+            text-align: center;
+        }
+    }
+}
+
+.openBurgerMenu {
+    animation: openBurger 1.5s forwards;
+
+    @keyframes openBurger {
+        50% {
+            opacity: 0.8;
+        }
+        100% {
+            transform: rotate(-90deg);
+        }
+    }
+}
+
+.closeBurgerMenu {
+    animation: closeBurger 1s forwards;
+
+    @keyframes closeBurger {
+        0% {
+            transform: rotate(-90deg);
+        }
+        50% {
+            opacity: 0.8;
+        }
+        100% {
+            transform: rotate();
+        }
+    }
 }
